centered weather app using margin and padding. Fixed issue where icon was hidden under nav.

--- a/css/main.css
+++ b/css/main.css
@@ -1104,12 +1104,17 @@ li.cfacts:before {
 
 .marsweather{
   padding-top: 2%;
-  margin:40px;
-  width: 30em;
+  width: 100%;
+  margin: 40px 0;
+}
+.mars-container {
+  margin-top: 4%;
+  margin-left: 40%;
 }
 #user_conlab{
   margin: 20px;
 }
+
 #launches-footer{
   margin-top:-200px;
 }
